# OpenDynamo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  clang.ini  mesh.cpp  mesh.hpp  meson.build
src/: cgns_reader.cpp  cgns_reader.hpp  concepts.hpp  enums.hpp  file_utils.cpp  main.cpp  mesh.cpp  mesh.hpp  meson.build  simulation.cpp  simulation.hpp  utils.cpp  utils.hpp
